--- a/templates/pagerduty_icinga.cfg.erb
+++ b/templates/pagerduty_icinga.cfg.erb
@@ -4,10 +4,10 @@ define contact {
        contactgroups                            admins
        service_notifications_enabled            1
        can_submit_commands                      1
-       service_notification_period              24x7
-       host_notification_period                 24x7
-       service_notification_options             w,u,c,r
-       host_notification_options                d,r
+       service_notification_period              <%= @service_notification_period %>
+       host_notification_period                 <%= @host_notification_period %>
+       service_notification_options             <%= @service_notification_options %>
+       host_notification_options                <%= @host_notification_options %>
        service_notification_commands            notify-service-by-pagerduty
        host_notification_commands               notify-host-by-pagerduty
        pager                                    <%= @servicekey %>
