--- a/templates/pagerduty.pl.erb
+++ b/templates/pagerduty.pl.erb
@@ -4,281 +4,276 @@
 use warnings;
 use strict;
 
-use CGI;
 use JSON;
 use LWP::UserAgent;
+use Getopt::Long qw/:config no_ignore_case bundling auto_abbrev/;
 
 # =============================================================================
 
-my $CONFIG = {
-	# Nagios/Ubuntu defaults
-	#'command_file' => '/var/lib/nagios3/rw/nagios.cmd', # External commands file
-	#'status_file' => '/var/cache/nagios3/status.dat', # Status data file
-	# Icinga/CentOS defaults
-	#'command_file' => '/var/spool/icinga/cmd/icinga.cmd', # External commands file
-	#'status_file' => '/var/spool/icinga/status.dat', # Status data file
-	'command_file' => '<%= @command_file %>', # External commands file
-	'status_file' => '<%= @status_file %>', # Status data file
-	# Icinga acknowledgement TTL
-	'ack_ttl' => 0, # Time in seconds the acknowledgement in Icinga last before
-	                # it times out automatically. 0 means the acknowledgement
-	                # never expires. If you're using Nagios this MUST be 0.
-};
+sub loadEnvironment {
+	my (%env) = @_;
+	my ($return, $key, @entry);
 
-# =============================================================================
+	$return = {};
 
-sub problemToHostService {
-	my ($problemID) = @_;
-	my ($line, $result, $type, $section, $problems);
+	foreach $key (keys (%env)) {
+		@entry = ($key);
 
-	$result = {};
-	$problems = {};
+		next unless ($entry [0] =~ /^NAGIOS_(\S+)$/i) || ($entry[0] =~ /^ICINGA_(\S+)$/i);
 
-	if (! open (STATUS, '<', $CONFIG->{'status_file'})) {
-		return (undef, $!);
-	}
+		$entry [1] = lc ($1);
 
-	while ($line = <STATUS>) {
-		$line =~ s/(\r\n|\n\r|\n|\r)//ms;
-		$line =~ s/#.*//;
-		$line =~ s/^\s+//;
-		$line =~ s/\s+$//;
+		if ($entry [1] =~ /^(ADMIN|MAX|NOTIFICATION)(\S+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
 
-		if ($line =~ /^([a-z0-9_-]+)\s*\{$/i) {
-			$type = lc ($1);
-			#if (! defined ($result->{$type})) {
-			#	$result->{$type} = {};
-			#}
-			$section = {};
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = {};
+			}
+			$return->{$entry [1]}->{$entry [2]} = $env {$entry [0]};
 
-		} elsif ($line =~ /^\}$/) {
-			if ($type eq 'info') {
-				#$result->{$type} = $section;
+		} elsif ($entry [1] =~ /^(ARG)(\d+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
 
-			} elsif ($type eq 'programstatus') {
-				#$result->{$type} = $section;
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = [];
+			}
+			$return->{$entry [1]}->[$entry [2] - 1] = $env {$entry [0]};
 
-			} elsif ($type eq 'hoststatus') {
-				#$result->{$type}->{$section->{'host_name'}} = $section;
+		} elsif ($entry [1] =~ /^(CONTACT)(\S+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
 
-				if (defined ($section->{'current_problem_id'}) && $section->{'current_problem_id'}) {
-					$problems->{$section->{'current_problem_id'} . ''} = {
-						'host' => $section->{'host_name'},
-					};
-				}
-				if (defined ($section->{'last_problem_id'}) && $section->{'last_problem_id'}) {
-					$problems->{$section->{'last_problem_id'} . ''} = {
-						'host' => $section->{'host_name'},
-					};
-				}
-
-			} elsif ($type eq 'servicestatus') {
-				#if (! defined ($result->{$type}->{$section->{'host_name'}})) {
-				#	$result->{$type}->{$section->{'host_name'}} = {};
-				#}
-				#$result->{$type}->{$section->{'host_name'}}->{$section->{'service_description'}} = $section;
-
-				if (defined ($section->{'current_problem_id'}) && $section->{'current_problem_id'}) {
-					$problems->{$section->{'current_problem_id'} . ''} = {
-						'host' => $section->{'host_name'},
-						'service' => $section->{'service_description'},
-					};
-				}
-				if (defined ($section->{'last_problem_id'}) && $section->{'last_problem_id'}) {
-					$problems->{$section->{'last_problem_id'} . ''} = {
-						'host' => $section->{'host_name'},
-						'service' => $section->{'service_description'},
-					};
-				}
-
-			} elsif ($type eq 'contactstatus') {
-				#$result->{$type}->{$section->{'contact_name'}} = $section;
-
-			} elsif ($type eq 'hostcomment') {
-				#$result->{$type}->{$section->{'host_name'}} = $section;
-
-			} elsif ($type eq 'servicecomment') {
-				#if (! defined ($result->{$type}->{$section->{'host_name'}})) {
-				#	$result->{$type}->{$section->{'host_name'}} = {};
-				#}
-				#$result->{$type}->{$section->{'host_name'}}->{$section->{'service_description'}} = $section;
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = {};
 			}
 
-			$section = {};
+			if ($entry [2] =~ /^(ADDRESS)(\d+)$/i) {
+				$entry [2] = $1;
+				$entry [3] = $2;
 
-		} elsif ($line =~ /^([a-z0-9_-]+)\s*=\s*(\S.*)$/) {
-			# Value
-			$section->{lc ($1)} = $2;
+				if (! defined ($return->{$entry [1]}->{$entry [2]})) {
+					$return->{$entry [1]}->{$entry [2]} = [];
+				}
+				$return->{$entry [1]}->{$entry [2]}->[$entry [3]] = $env {$entry [0]};
+
+			} elsif ($entry [2] =~ /^(GROUP)(\S+)$/i) {
+				$entry [2] = $1;
+				$entry [3] = $2;
+
+				if (! defined ($return->{$entry [1]}->{$entry [2]})) {
+					$return->{$entry [1]}->{$entry [2]} = {};
+				}
+				$return->{$entry [1]}->{$entry [2]}->{$entry [3]} = $env {$entry [0]};
+
+			} else {
+				$return->{$entry [1]}->{$entry [2]} = $env {$entry [0]};
+			}
+
+		} elsif ($entry [1] =~ /^(HOST|SERVICE)(\S+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
+
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = {};
+			}
+
+			if ($entry [2] =~ /^(ACK|GROUP|CHECK|NOTIFICATION)(\S+)$/i) {
+				$entry [2] = $1;
+				$entry [3] = $2;
+
+				if (! defined ($return->{$entry [1]}->{$entry [2]})) {
+					$return->{$entry [1]}->{$entry [2]} = {};
+				}
+				$return->{$entry [1]}->{$entry [2]}->{$entry [3]} = $env {$entry [0]};
+
+			} else {
+				$return->{$entry [1]}->{$entry [2]} = $env {$entry [0]};
+			}
+
+		} elsif ($entry [1] =~ /^(LAST)(\S+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
+
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = {};
+			}
+
+			if ($entry [2] =~ /^(HOST|SERVICE)(\S+)$/i) {
+				$entry [2] = $1;
+				$entry [3] = $2;
+
+				if (! defined ($return->{$entry [1]}->{$entry [2]})) {
+					$return->{$entry [1]}->{$entry [2]} = {};
+				}
+				$return->{$entry [1]}->{$entry [2]}->{$entry [3]} = $env {$entry [0]};
+
+			} else {
+				$return->{$entry [1]}->{$entry [2]} = $env {$entry [0]};
+			}
+
+		} elsif ($entry [1] =~ /^(TOTAL)(\S+)$/i) {
+			$entry [1] = $1;
+			$entry [2] = $2;
+
+			if (! defined ($return->{$entry [1]})) {
+				$return->{$entry [1]} = {};
+			}
+
+			if ($entry [2] =~ /^(HOSTS|HOST|SERVICES|SERVICE)(\S+)$/i) {
+				$entry [2] = $1;
+				$entry [3] = $2;
+
+				if (! defined ($return->{$entry [1]}->{$entry [2]})) {
+					$return->{$entry [1]}->{$entry [2]} = {};
+				}
+				$return->{$entry [1]}->{$entry [2]}->{$entry [3]} = $env {$entry [0]};
+
+			} else {
+				$return->{$entry [1]}->{$entry [2]} = $env {$entry [0]};
+			}
+
+		} else {
+			$return->{lc ($entry [1])} = $env {$entry [0]};
 		}
 	}
 
-	if (defined ($problems->{$problemID . ''})) {
-		return ($problems->{$problemID . ''});
+	$return->{'type'} = 'host';
+	if ($return->{'last'} && $return->{'last'}->{'service'} && $return->{'last'}->{'service'}->{'check'}) {
+		$return->{'type'} = 'service';
 	}
 
-	return (undef);
+	return ($return);
 }
 
 # =============================================================================
 
-sub ackHost {
-	my ($time, $host, $comment, $author, $sticky, $notify, $persistent) = @_;
+my (%OPTIONS);
 
-	# Open the external commands file
-	if (! open (NAGIOS, '>>', $CONFIG->{'command_file'})) {
-		# Well shizzle
-		return (undef, $!);
-	}
+%OPTIONS = (
+	'api_url' => 'https://events.pagerduty.com/generic/2010-04-15/create_event.json',
+);
 
-	# Success! Write the command
-	if ($CONFIG->{'ack_ttl'} <= 0) {
-		printf (NAGIOS "[%u] ACKNOWLEDGE_HOST_PROBLEM;%s;%u;%u;%u;%s;%s\n", $time, $host, $sticky, $notify, $persistent, $author, $comment);
-
-	} else {
-		printf (NAGIOS "[%u] ACKNOWLEDGE_HOST_PROBLEM_EXPIRE;%s;%u;%u;%u;%u;%s;%s\n", $time, $host, $sticky, $notify, $persistent, ($time + $CONFIG->{'ack_ttl'}), $author, $comment);
-	}
-	# Close the file handle
-	close (NAGIOS);
-
-	# Return with happiness
-	return (1, undef);
-}
+GetOptions (
+	'a|apiurl=s' => \$OPTIONS {'api_url'},
+) || (
+	exit (1)
+);
 
 # =============================================================================
 
-sub deackHost {
-	my ($time, $host) = @_;
+my ($event, $nagios);
 
-	# Open the external commands file
-	if (! open (NAGIOS, '>>', $CONFIG->{'command_file'})) {
-		# Well shizzle
-		return (undef, $!);
-	}
-
-	# Success! Write the command
-	printf (NAGIOS "[%u] REMOVE_HOST_ACKNOWLEDGEMENT;%s\n", $time, $host);
-	# Close the file handle
-	close (NAGIOS);
-
-	# Return with happiness
-	return (1, undef);
-}
-
-# =============================================================================
-
-sub ackService {
-	my ($time, $host, $service, $comment, $author, $sticky, $notify, $persistent) = @_;
-
-	# Open the external commands file
-	if (! open (NAGIOS, '>>', $CONFIG->{'command_file'})) {
-		# Well shizzle
-		return (undef, $!);
-	}
-
-	# Success! Write the command
-	if ($CONFIG->{'ack_ttl'} <= 0) {
-		printf (NAGIOS "[%u] ACKNOWLEDGE_SVC_PROBLEM;%s;%s;%u;%u;%u;%s;%s\n", $time, $host, $service, $sticky, $notify, $persistent, $author, $comment);
-
-	} else {
-		printf (NAGIOS "[%u] ACKNOWLEDGE_SVC_PROBLEM_EXPIRE;%s;%s;%u;%u;%u;%u;%s;%s\n", $time, $host, $service, $sticky, $notify, $persistent, ($time + $CONFIG->{'ack_ttl'}), $author, $comment);
-	}
-
-	# Close the file handle
-	close (NAGIOS);
-
-	# Return with happiness
-	return (1, undef);
-}
-
-# =============================================================================
-
-sub deackService {
-	my ($time, $host, $service) = @_;
-
-	# Open the external commands file
-	if (! open (NAGIOS, '>>', $CONFIG->{'command_file'})) {
-		# Well shizzle
-		return (undef, $!);
-	}
-
-	# Success! Write the command
-	printf (NAGIOS "[%u] REMOVE_SVC_ACKNOWLEDGEMENT;%s;%s\n", $time, $host, $service);
-	# Close the file handle
-	close (NAGIOS);
-
-	# Return with happiness
-	return (1, undef);
-}
-
-# =============================================================================
-
-my ($TIME, $QUERY, $POST, $JSON);
-
-$TIME = time ();
-
-$QUERY = CGI->new ();
-
-if (! defined ($POST = $QUERY->param ('POSTDATA'))) {
-	print ("Status: 400 Requests must be POSTs\n\n400 Requests must be POSTs\n");
-	exit (0);
-}
-
-if (! defined ($JSON = JSON->new ()->utf8 ()->decode ($POST))) {
-	print ("Status: 400 Request payload must be JSON blob\n\n400 Request payload must JSON blob\n");
-	exit (0);
-}
-
-if ((ref ($JSON) ne 'HASH') || ! defined ($JSON->{'messages'}) || (ref ($JSON->{'messages'}) ne 'ARRAY')) {
-	print ("Status: 400 JSON blob does not match the expected format\n\n400 JSON blob does not match expected format\n");
-	exit (0);
-}
-
-my ($message, $return);
-$return = {
-	'status' => 'okay',
-	'messages' => {}
+$nagios = loadEnvironment (%ENV);
+$event = {
+	'service_key' => $nagios->{'contact'}->{'pager'},
+	'incident_key' => undef,
+	'event_type' => undef,
+	'description' => undef,
+	'details' => $nagios,
 };
 
-MESSAGE: foreach $message (@{$JSON->{'messages'}}) {
-	my ($hostservice, $status, $error);
+if (! defined ($event->{'client_url'})) {
+	delete ($event->{'client_url'});
+}
 
-	if ((ref ($message) ne 'HASH') || ! defined ($message->{'type'})) {
-		next MESSAGE;
+if ($nagios->{'type'} eq 'host') {
+	if ($nagios->{'notification'}->{'type'} eq 'RECOVERY') {
+		$event->{'incident_key'} = $nagios->{'last'}->{'host'}->{'problemid'};
+
+	} else {
+		$event->{'incident_key'} = $nagios->{'host'}->{'problemid'};
 	}
 
-	$hostservice = problemToHostService ($message->{'data'}->{'incident'}->{'incident_key'});
+} elsif ($nagios->{'type'} eq 'service') {
+	if ($nagios->{'notification'}->{'type'} eq 'RECOVERY') {
+		$event->{'incident_key'} = $nagios->{'last'}->{'service'}->{'problemid'};
 
-	if (! defined ($hostservice)) {
-		next MESSAGE;
-	}
-
-	if ($message->{'type'} eq 'incident.acknowledge') {
-		if (! defined ($hostservice->{'service'})) {
-			($status, $error) = ackHost ($TIME, $hostservice->{'host'}, 'Acknowledged by PagerDuty', 'PagerDuty', 2, 0, 0);
-
-		} else {
-			($status, $error) = ackService ($TIME, $hostservice->{'host'}, $hostservice->{'service'}, 'Acknowledged by PagerDuty', 'PagerDuty', 2, 0, 0);
-		}
-
-		$return->{'messages'}{$message->{'id'}} = {
-			'status' => ($status ? 'okay' : 'fail'),
-			'message' => ($error ? $error : undef)
-		};
-
-	} elsif ($message->{'type'} eq 'incident.unacknowledge') {
-		if (! defined ($hostservice->{'service'})) {
-			($status, $error) = deackHost ($TIME, $hostservice->{'host'});
-
-		} else {
-			($status, $error) = deackService ($TIME, $hostservice->{'host'}, $hostservice->{'service'});
-		}
-
-		$return->{'messages'}->{$message->{'id'}} = {
-			'status' => ($status ? 'okay' : 'fail'),
-			'message' => ($error ? $error : undef)
-		};
-		$return->{'status'} = ($status eq 'okay' ? $return->{'status'} : 'fail');
+	} else {
+		$event->{'incident_key'} = $nagios->{'service'}->{'problemid'};
 	}
 }
 
-printf ("Status: 200 Okay\nContent-type: application/json\n\n%s\n", JSON->new ()->utf8 ()->encode ($return));
+if (($nagios->{'notification'}->{'type'} eq 'PROBLEM') || ($nagios->{'notification'}->{'type'} eq 'RECOVERY')) {
+	$event->{'event_type'} = ($nagios->{'notification'}->{'type'} eq 'PROBLEM' ? 'trigger' : 'resolve');
+
+	if ($nagios->{'type'} eq 'host') {
+		$event->{'description'} =
+			$nagios->{'host'}->{'state'} .
+			': ' .
+			$nagios->{'host'}->{'name'} .
+			' reports ' .
+			$nagios->{'host'}->{'output'} .
+			' (' .
+			$nagios->{'host'}->{'check'}->{'command'} .
+			')';
+
+	} elsif ($nagios->{'type'} eq 'service') {
+		$event->{'description'} =
+			$nagios->{'service'}->{'state'} .
+			': ' .
+			($nagios->{'service'}->{'displayname'} ? $nagios->{'service'}->{'displayname'} : $nagios->{'service'}->{'desc'}) .
+			' on ' .
+			$nagios->{'host'}->{'name'} .
+			' reports ' .
+			$nagios->{'service'}->{'output'} .
+			' (' .
+			$nagios->{'service'}->{'check'}->{'command'} .
+			')';
+	}
+
+} elsif ($nagios->{'notification'}->{'type'} eq 'ACKNOWLEDGEMENT') {
+	$event->{'event_type'} = 'acknowledge';
+
+	if ($nagios->{'type'} eq 'host') {
+		$event->{'description'} =
+			$nagios->{'host'}->{'state'} .
+			' for ' .
+			$nagios->{'host'}->{'name'} .
+			' acknowledged by ' .
+			$nagios->{'notification'}->{'author'} .
+			' saying ' .
+			$nagios->{'notification'}->{'comment'};
+
+	} elsif ($nagios->{'type'} eq 'service') {
+		$event->{'description'} =
+			$nagios->{'service'}->{'state'} .
+			' for ' .
+			($nagios->{'service'}->{'displayname'} ? $nagios->{'service'}->{'displayname'} : $nagios->{'service'}->{'desc'}) .
+			' on ' .
+			$nagios->{'host'}->{'name'} .
+			' acknowledged by ' .
+			$nagios->{'notification'}->{'author'} .
+			' saying ' .
+			$nagios->{'notification'}->{'comment'};
+	}
+
+} else {
+	exit (0);
+}
+
+# =============================================================================
+
+my ($time, $host, $service) = @_;
+my ($useragent, $response);
+
+$useragent = LWP::UserAgent->new ();
+
+<%# Proxy integration %>
+<% if use_proxy == 'yes' -%>
+$useragent->timeout(15);
+$useragent->proxy(<% @proxy_proto %> =>'<% @proxy %>');
+<% end -%>
+
+$response = $useragent->post (
+	$OPTIONS {'api_url'},
+	'Content_Type' => 'application/json',
+	'Content' => JSON->new ()->utf8 ()->encode ($event)
+);
+
+if (! $response->is_success ()) {
+	exit (1);
+}
+
+exit (0);
