--- a/templates/pagerduty_icinga.cfg.erb
+++ b/templates/pagerduty_icinga.cfg.erb
@@ -1,7 +1,6 @@
 define contact {
        contact_name                             pagerduty
        alias                                    PagerDuty Pseudo-Contact
-       contactgroups                            admins
        service_notifications_enabled            1
        can_submit_commands                      1
        service_notification_period              <%= @service_notification_period %>
@@ -15,10 +14,10 @@ define contact {
 
 define command {
        command_name     notify-service-by-pagerduty
-       command_line     /usr/lib/<%= @mon %>/pagerduty.pl enqueue -f pd_nagios_object=service
+       command_line     /usr/lib/<%= @mon %>/pagerduty.pl
 }
 
 define command {
        command_name     notify-host-by-pagerduty
-       command_line     /usr/lib/<%= @mon %>/pagerduty.pl enqueue -f pd_nagios_object=host
+       command_line     /usr/lib/<%= @mon %>/pagerduty.pl
 }
